k8s/overlays/dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-frontend-service
  namespace: dev
  labels:
    app: devops-frontend
spec:
  selector:
    app: devops-frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
